# humanwrite

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  RESEARCH_CONTEXT.md
harness/: PREREGISTRATION.md  README.md  baseline_stats.json  build_v3_sample_report.py  calibration.json  calibration_v2.json  deployment_sampler.json  embed_scale_ladder_4k_modal.py  embed_v3_candidates_modal.py  generate_v3_candidates_modal.py  judge_scale_ladder_4k_modal.py  judge_v3_candidates_modal.py  materialize_v3_decision_power.py  materialize_v3_human_embeddings_modal.py  materialize_v3_positive_controls_modal.py  pyproject.toml  score_scale_ladder_4k.py  score_v3_candidates.py  summarize_v3_judge.py  write_confirmation_samples.py
harness/measurement_v2/: OPERATOR_PIPELINE.md  bandwidths_v2.json  blind_test_manifest_v2.candidate.json  calibration_v2_measurement.json  historical_v1_inventory.json  historical_v1_quarantine.json  human_panel_contents_v2.unmaterialized.json  human_panels_v2.manifest.json  matched_baseline_outputs_v2.unmaterialized.jsonl  matched_sft_baseline_v2.json  measurement_protocol_v2.candidate.json  power_plan_v2.json  prompt_brief_v2.unmaterialized.txt  prompt_panel_v2.json  selection_policy_v2.json
harness/schemas/: measurement_attestation_v2.schema.json  measurement_hard_gate_evidence_v1.schema.json  measurement_protocol_v2.schema.json  measurement_report_v2.schema.json
harness/tests/: test_cli.py  test_distribution.py  test_distribution_v2.py  test_measurement_v2.py  test_measurement_v2_bindings.py  test_measurement_v2_hard_gate_evidence.py  test_quality.py  (+10 more)
(+507 files in other folders)
