[project]
name = "dftr-harness"
version = "0.1.0"
description = "Tier 1 development evaluator for DFT-R (immutable to the research agent)"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "sentence-transformers>=3",
  "transformers>=4.45",
  "peft>=0.13",
  "torch>=2.2",
  "pyyaml>=6",
  "requests>=2.31",
  "cryptography>=42",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
